Chatting, user and login interface.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:theme="@style/Theme.Zenchat"
         tools:targetApi="31">
         <activity
+            android:name=".ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -19,16 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUp">
-        </activity>
-        <activity android:name=".After_SP">
-        </activity>
-        <activity android:name=".email_FP">
-        </activity>
-        <activity android:name=".ResetPass">
-        </activity>
-        <activity android:name=".Login">
-        </activity>
+        <activity android:name=".SignUp"></activity>
+        <activity android:name=".After_SP"></activity>
+        <activity android:name=".email_FP"></activity>
+        <activity android:name=".ResetPass"></activity>
+        <activity android:name=".OnLogin"></activity>
     </application>
 
 </manifest>
